docs: add swagger annotations for getting ads endpoint
